compiler/tests/safety/success/common/randombytes.jazz
export fn test1() -> reg u32 {
  stack u32[1] r;
  reg u32 x;
  reg u64 len = 4;
  r = #randombytes{4}(r, len);
  x = r[0];
  return x;
}

export fn test2() -> reg u32 {
  stack u32[2] r;
  reg u32 x;
  reg u64 len = 4;
  r[1:1] = #randombytes{4}(r[1:1], len);
  x = r[1];
  return x;
}
