compiler/tests/safety/fail/common/array_init.jazz
export
fn bad_read() -> reg u32 {
  stack u32[2] t;
  reg u32 r;
  t[0] = 42;
  t[1] = 33;
  ArrayInit(t);
  r = t[0];
  return r;
}
